--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
+    "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.5.2",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
